Working on universal IO supprt between the backend and the frontends.

--- a/install
+++ b/install
@@ -224,8 +224,8 @@ fi
 
 if [[ $1 == "dev" ]]; then
 	echo -e "\nDev mode active."
-	sudo -S cp assets/os/dev/miz /usr/bin/
-	cp assets/os/dev/mizOS.lua /var/mizOS/core/
+	sudo -S cp assets/dev/miz /usr/bin/
+	cp assets/os/mizOS.lua /var/mizOS/core/
 fi
 
 
